--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ attrs==21.2.0
 Babel==2.9.1
 certifi==2021.5.30
 chardet==4.0.0
+charset-normalizer==2.0.3
 idna==3.2
 multidict==5.1.0
 pytz==2021.1
+requests==2.26.0
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 yarl==1.6.3
