--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,15 @@ Babel==2.9.1
 certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.0.3
+click==8.0.1
+colorama==0.4.4
 idna==3.2
+libretranslatepy==2.1.1
+lxml==4.6.3
 multidict==5.1.0
 pytz==2021.1
 requests==2.26.0
+translate==3.6.1
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 yarl==1.6.3
