--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,16 @@ aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
 Babel==2.9.1
+beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
 idna==3.2
 langdetect==1.0.9
 multidict==5.1.0
 pytz==2021.1
+selenium==3.141.0
 six==1.16.0
+soupsieve==2.2.1
 typing-extensions==3.10.0.0
+urllib3==1.26.6
 yarl==1.6.3
