--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,21 @@ aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
 Babel==2.9.1
-beautifulsoup4==4.9.3
 certifi==2021.5.30
 chardet==4.0.0
+charset-normalizer==2.0.3
+click==8.0.1
+colorama==0.4.4
 idna==3.2
 langdetect==1.0.9
+libretranslatepy==2.1.1
+lxml==4.6.3
 multidict==5.1.0
 pytz==2021.1
-selenium==3.141.0
+requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
+translate==3.6.1
 typing-extensions==3.10.0.0
 urllib3==1.26.6
 yarl==1.6.3
